--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,8 @@
 # This file lists all individuals having contributed content to the repository.
 
 
+Raji Azeez <rajiazeezsch@gmail.com>
+Adesola  Deborah <debbyrinsola@gmail.com>
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
